name:
  tower
version:
  0.1.0
synopsis:
  A numeric tower
description:
  A heirarchy of classes for numbers and algebras that combine them: a numeric tower.
  .
  Performance testing, notes and examples can be found in <https://github.com/tonyday567/tower-dev tower-dev>.
  .
  The tower looks something like:
  .
  <<https://tonyday567.github.io/other/field-tower.svg>>
  .
  To use the library:
  .
  > import Tower.Prelude
  > print $ 1 + 1
category:
  mathematics
homepage:
  https://github.com/tonyday567/tower
license:
  BSD3
license-file:
  LICENSE
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day
build-type:
  Simple
cabal-version:
  >=1.14

library
  default-language:
    Haskell2010
  ghc-options:
  hs-source-dirs:
    src
  exposed-modules:
    Tower.Prelude,
    Tower.Examples,
    Tower.Algebra,
    Tower.Additive,
    Tower.Basis,
    Tower.Exponential,
    Tower.Distribution,
    Tower.Ring,
    Tower.Field,
    Tower.Integral,
    Tower.Magma,
    Tower.Metric,
    Tower.Module,
    Tower.Multiplicative
    Tower.Ordering,
    Tower.V,
    Tower.M,
    Tower.Bool,
    Tower.Category,
    Tower.Finite,
    Tower.Num
  build-depends:
    base >= 4.7 && < 5,
    protolude,
    vector,
    QuickCheck,
    lens,
    adjunctions,
    distributive,
    linear,
    algebra,
    singletons,
    constraints
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators,
    ExtendedDefaultRules

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    test.hs
  build-depends:
    base >= 4.7 && < 5,
    protolude,
    tasty,
    HUnit,
    tasty-hunit,
    smallcheck,
    tasty-smallcheck,
    QuickCheck,
    tasty-quickcheck,
    tower,
    lens,
    doctest,
    linear,
    singletons >= 2.2
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators,
    ExtendedDefaultRules

source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/tower
